--- a/DiscoverCluj/app/src/main/res/values/strings.xml
+++ b/DiscoverCluj/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="button_5">Button 5</string>
     <string name="search_button">search_button</string>
     <string name="exit_button">exit_button</string>
+    <string name="open_app_settings">Open Discover Cluj Settings in your phone.</string>
+    <string name="open_settings_button">+</string>
 </resources>
