--- a/DiscoverCluj/app/src/main/res/values/strings.xml
+++ b/DiscoverCluj/app/src/main/res/values/strings.xml
@@ -10,4 +10,8 @@
     <string name="exit_button">exit_button</string>
     <string name="open_app_settings">Open Discover Cluj Settings in your phone.</string>
     <string name="open_settings_button">+</string>
+    <string name="title_beautify">Chestie deasupra titlului</string>
+    <string name="settings_About">About</string>
+    <string name="settings_Version">Version</string>
+    <string name="settings_set">Settings</string>
 </resources>
