--- a/DiscoverCluj/app/src/main/res/values/strings.xml
+++ b/DiscoverCluj/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources tools:ignore="ExtraTranslation" xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">Discover Cluj</string>
     <string name="title_text">Discover\nCluj Napoca</string>
     <string name="button_1">Button 1</string>
@@ -8,14 +8,14 @@
     <string name="button_5">Button 5</string>
     <string name="search_button">search_button</string>
     <string name="exit_button">exit_button</string>
-  // Open Settings
+
     <string name="open_app_settings">Open Discover Cluj Settings in your phone.</string>
     <string name="open_settings_button">+</string>
     <string name="title_beautify">Chestie deasupra titlului</string>
     <string name="settings_About">About</string>
     <string name="settings_Version">Version</string>
     <string name="settings_set">Settings</string>
-  // Locations
+
     <string name="location_first_label">Name:</string>
     <string name="location_second_label">Address:</string>
 </resources>
